--- a/src/main/resources/view/PersonDetailPanel.fxml
+++ b/src/main/resources/view/PersonDetailPanel.fxml
@@ -26,7 +26,7 @@
                   <StackPane>
                      <children>
                         <Circle fx:id="avatar" fill="DODGERBLUE" radius="70.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-                        <Label id="initial_big" fx:id="initial" text="Label" textFill="WHITE" />
+                        <Label id="initialBig" fx:id="initial" text="Label" textFill="WHITE" />
                      </children>
                   </StackPane>
                   <VBox alignment="CENTER_LEFT">
@@ -34,7 +34,7 @@
                         <VBox styleClass="person-name-label">
                            <children>
                               <Label fx:id="name" alignment="TOP_LEFT" styleClass="person-big-label" text="\$first" wrapText="true" />
-                              <FlowPane fx:id="tags" />
+                              <FlowPane id="tagsBordered" fx:id="tags" />
                            </children>
                            <padding>
                               <Insets bottom="20.0" />
@@ -55,7 +55,7 @@
                               <Insets bottom="2.0" right="2.0" top="2.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="remark" styleClass="person-remark" text="\$remark" wrapText="true" />
+                        <Label fx:id="remark" styleClass="person-remark-label" text="\$remark" wrapText="true" />
                      </children>
                      <padding>
                         <Insets left="20.0" />
