--- a/src/main/resources/view/PersonDetailPanel.fxml
+++ b/src/main/resources/view/PersonDetailPanel.fxml
@@ -31,7 +31,7 @@
                   </StackPane>
                   <VBox alignment="CENTER_LEFT">
                      <children>
-                        <VBox styleClass="person-name-label">
+                        <VBox>
                            <children>
                               <Label fx:id="name" alignment="TOP_LEFT" styleClass="person-big-label" text="\$first" wrapText="true" />
                               <FlowPane id="tagsBordered" fx:id="tags" />
@@ -40,22 +40,29 @@
                               <Insets bottom="20.0" />
                            </padding>
                         </VBox>
-                        <Label fx:id="phone" styleClass="person-small-label" text="\$phone">
+                        <VBox>
+                           <children>
+                              <Label fx:id="phone" styleClass="person-small-label" text="\$phone">
+                                 <padding>
+                                    <Insets bottom="2.0" right="2.0" top="2.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="email" styleClass="person-small-label" text="\$email">
+                                 <padding>
+                                    <Insets bottom="2.0" right="2.0" top="2.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="address" styleClass="person-small-label" text="\$address">
+                                 <padding>
+                                    <Insets bottom="2.0" right="2.0" top="2.0" />
+                                 </padding>
+                              </Label>
+                           </children>
                            <padding>
-                              <Insets bottom="2.0" right="2.0" top="2.0" />
+                              <Insets bottom="20.0" />
                            </padding>
-                        </Label>
-                        <Label fx:id="email" styleClass="person-small-label" text="\$email">
-                           <padding>
-                              <Insets bottom="2.0" right="2.0" top="2.0" />
-                           </padding>
-                        </Label>
-                        <Label fx:id="address" styleClass="person-small-label" text="\$address">
-                           <padding>
-                              <Insets bottom="2.0" right="2.0" top="2.0" />
-                           </padding>
-                        </Label>
-                        <Label fx:id="remark" styleClass="person-remark-label" text="\$remark" wrapText="true" />
+                        </VBox>
+                        <Label id="remarkLabel" fx:id="remark" text="\$remark" wrapText="true" />
                      </children>
                      <padding>
                         <Insets left="20.0" />
