Tableview assigned names

--- a/src/main/resources/view/BirthdayAlarmWindow.fxml
+++ b/src/main/resources/view/BirthdayAlarmWindow.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TitledPane?>
 
 
-<TitledPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<TitledPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" text="Birthdays" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <content>
       <TableView prefHeight="200.0" prefWidth="200.0">
         <columns>
