--- a/src/main/resources/view/BirthdayAlarmWindow.fxml
+++ b/src/main/resources/view/BirthdayAlarmWindow.fxml
@@ -4,13 +4,12 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TitledPane?>
 
-
-<TitledPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" text="Birthdays" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<TitledPane fx:id="BirthdayTableWindowroot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" text="Birthdays" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <content>
-      <TableView prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="BirthdayTable" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn prefWidth="296.0" text="Name" />
-          <TableColumn prefWidth="302.0" text="Birthday" />
+          <TableColumn fx:id="NameColumn" prefWidth="296.0" text="Name" />
+          <TableColumn fx:id="BirthdayColumn" prefWidth="302.0" text="Birthday" />
         </columns>
       </TableView>
    </content>
