--- a/src/main/resources/view/default.html
+++ b/src/main/resources/view/default.html
@@ -5,7 +5,8 @@
     </style>
     <link rel="stylesheet" href="DarkTheme.css">
 </head>
-<img class="center fit" src="../images/gentleman.jpg" >
+
+<img class="center fit opening-img" src="../images/gentleman.jpg" >
 
 <body class="background"></body>
 </html>
