--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
   <stylesheets>
     <URL value="@DarkTheme.css" />
     <URL value="@Extensions.css" />
@@ -36,15 +36,15 @@
     </padding>
   </StackPane>
 
-  <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.25, 0.5" VBox.vgrow="ALWAYS">
-    <VBox fx:id="personList" minWidth="340" maxWidth="340" SplitPane.resizableWithParent="false">
+  <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.25, 0.5" minHeight="10.0" VBox.vgrow="ALWAYS">
+    <VBox fx:id="personList" maxWidth="340" minWidth="340" SplitPane.resizableWithParent="false">
       <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
       </padding>
       <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
     </VBox>
 
-      <VBox fx:id="reminderList" minWidth="340" maxWidth="340">
+      <VBox fx:id="reminderList" maxWidth="340" minWidth="340">
          <padding>
             <Insets bottom="10" left="10" right="10" top="10" />
          </padding>
