Edited UI and ScheduleCommand for multiple names for schedule

--- a/src/main/resources/view/ScheduleCard.fxml
+++ b/src/main/resources/view/ScheduleCard.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- @@author 17navasaw -->
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -38,7 +39,7 @@
             <font>
                <Font name="System Bold" size="13.0" />
             </font></Label>
-         <Label fx:id="personName" text="\\$person" />
+         <VBox fx:id="personNames" prefWidth="100.0" />
     </VBox>
       <rowConstraints>
          <RowConstraints />
