--- a/src/main/resources/view/ExtendDetailsPerson.fxml
+++ b/src/main/resources/view/ExtendDetailsPerson.fxml
@@ -1,22 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="236.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Circle fx:id="circle" fill="#bfcbd7" radius="46.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" translateX="60.0" translateY="20.0" />
       <Line endX="100.0" startX="-100.0" stroke="#176fb2" strokeWidth="2.0" translateY="35.0" />
-      <Label fx:id="name" text="-" translateX="20.0" translateY="40.0" wrapText="true" />
-      <ImageView fitHeight="10.0" fitWidth="15.0" layoutX="10.0" layoutY="276.0" pickOnBounds="true" preserveRatio="true" translateY="-62.0" />
-      <Label fx:id="phone" text="-" translateX="20.0" translateY="30.0" />
-      <Label fx:id="address" prefWidth="300.0" text="-" translateX="20.0" translateY="30.0" wrapText="true" />
-      <Label fx:id="email" text="-" translateX="20.0" translateY="30.0" wrapText="true" />
-      <Label fx:id="remark" text="-" translateX="20.0" translateY="30.0" wrapText="true" />
-      <Label fx:id="birthday" text="-" translateX="20.0" translateY="30.0" wrapText="true" />
-      <Label fx:id="age" text="-" translateX="20.0" translateY="30.0" />
+      <Label fx:id="name" text="-" translateX="20.0" translateY="40.0" wrapText="true">
+         <graphic>
+            <ImageView fx:id="nameIcon" fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true" />
+         </graphic></Label>
+      <Label fx:id="phone" text="-" translateX="20.0" translateY="35.0">
+         <graphic>
+            <ImageView fx:id="phoneIcon" fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/Mobile-Phone-icon.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
+      <Label fx:id="address" prefWidth="240.0" text="-" translateX="20.0" translateY="35.0" wrapText="true">
+         <graphic>
+            <ImageView fx:id="addressIcon" fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/address.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
+      <Label fx:id="email" prefWidth="240.0" text="-" translateX="20.0" translateY="35.0" wrapText="true">
+         <graphic>
+            <ImageView fx:id="emailIcon" fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/email-icon.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
+      <Label fx:id="remark" prefWidth="240.0" text="-" translateX="20.0" translateY="35.0" wrapText="true">
+         <graphic>
+            <ImageView fx:id="remarkIcon" fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/RemarkIcon.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
+      <Label fx:id="birthday" prefWidth="240.0" text="-" translateX="20.0" translateY="35.0" wrapText="true">
+         <graphic>
+            <ImageView fx:id="birthdayIcon" fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/BirthdayIcon.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
+      <Label fx:id="age" prefWidth="240.0" text="-" translateX="20.0" translateY="40.0">
+         <graphic>
+            <ImageView fx:id="ageIcon" fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/AgeIcon.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
    </children>
 </VBox>
