--- a/src/main/resources/view/DetailsPanel.fxml
+++ b/src/main/resources/view/DetailsPanel.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
+<!--//@@author archthegit-->
+
 <StackPane fx:id="detailsPanel" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
 <VBox fx:id="pane" prefHeight="600.0" prefWidth="800.0">
     <children>
