Add time clock for UI in statusbar

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -166,6 +166,7 @@
 .status-bar .label {
     -fx-font-family: "Segoe UI Light";
     -fx-text-fill: white;
+    -fx-font-size: 9pt;
 }
 
 .status-bar-with-border {
