--- a/src/main/resources/view/LightExtensions.css
+++ b/src/main/resources/view/LightExtensions.css
@@ -1,4 +1,4 @@
-
+/*@@author cctdaniel*/
 .error {
     -fx-text-fill: #d06651 !important; /* The error class should always override the default text-fill style */
 }
