--- a/src/main/resources/view/StatusBarFooter.fxml
+++ b/src/main/resources/view/StatusBarFooter.fxml
@@ -7,18 +7,16 @@
 
 <GridPane styleClass="grid-pane" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="160.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="110.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="60.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="70.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="140.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints />
     </columnConstraints>
     <StatusBar fx:id="syncStatus" styleClass="anchor-pane" />
     <StatusBar fx:id="saveLocationStatus" nodeOrientation="RIGHT_TO_LEFT" styleClass="anchor-pane" GridPane.columnIndex="1" />
-    <StatusBar fx:id="numberPersonStatus" nodeOrientation="RIGHT_TO_LEFT" styleClass="anchor-pane" GridPane.columnIndex="3" />
-    <StatusBar fx:id="taskPersonStatus" nodeOrientation="RIGHT_TO_LEFT" styleClass="anchor-pane" GridPane.columnIndex="2" />
-    <StatusBar fx:id="timeStatus" nodeOrientation="RIGHT_TO_LEFT" styleClass="anchor-pane" text="" GridPane.columnIndex="4" />
+    <StatusBar fx:id="numberStatus" nodeOrientation="RIGHT_TO_LEFT" styleClass="anchor-pane" GridPane.columnIndex="2" />
+    <StatusBar fx:id="timeStatus" nodeOrientation="RIGHT_TO_LEFT" styleClass="anchor-pane" text="" GridPane.columnIndex="3" />
    <rowConstraints>
       <RowConstraints />
    </rowConstraints>
