--- a/src/main/resources/view/ResultDisplay.fxml
+++ b/src/main/resources/view/ResultDisplay.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
 <StackPane fx:id="placeHolder" styleClass="pane-with-border" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <ImageView fx:id="imageDisplay" fitHeight="106.0" fitWidth="138.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_CENTER">
@@ -11,9 +12,12 @@
          <Insets top="5.0" />
       </StackPane.margin>
    </ImageView>
-  <TextArea fx:id="resultDisplay" editable="false" minHeight="-Infinity" prefHeight="89.0" prefWidth="478.0" style="-fx-font-size: 20;" styleClass="result-display" StackPane.alignment="TOP_CENTER">
+  <TextArea fx:id="resultDisplay" editable="false" minHeight="-Infinity" prefHeight="89.0" prefWidth="478.0" styleClass="result-display" wrapText="true" StackPane.alignment="TOP_CENTER">
       <StackPane.margin>
          <Insets top="118.0" />
       </StackPane.margin>
+      <font>
+         <Font size="32.0" />
+      </font>
    </TextArea>
 </StackPane>
